# TimeSeriesFeatureGenerationFunctime

./: .gitignore  README.md  pyproject.toml
notebooks/ts_feature_generator/: ts_feature_generator.ipynb
