[tool.poetry]
name = "blogpost"
version = "0.1.0"
description = ""
authors = ["Mark Willoughby <mark.willoughbyg@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
functime = "^0.9.5"
polars = "0.20.31"
seaborn = "^0.13.2"
pyarrow = "^18.1.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
